<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecf0f1"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- Universidad -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:singleLine="true"
            android:text="@string/label_universidad_registro"
            android:textColor="#838282" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/input_movilu_normal"
            android:dropDownSelector="@drawable/boton_movilu_normal"
            android:popupBackground="@drawable/input_movilu_normal"
            android:prompt="@string/label_universidad" />

        <!-- Nombres -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:singleLine="true"
            android:text="@string/label_nombres_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="textCapWords" />

        <!-- Apellidos -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:singleLine="true"
            android:text="@string/label_apellidos_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="textCapWords" />

        <!-- Celular -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:singleLine="true"
            android:text="@string/label_celular_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="phone" />

        <!-- Fecha Nacimiento -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:singleLine="true"
            android:text="@string/label_nacimiento_registro"
            android:textColor="#838282" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="10dip"
                android:layout_weight="7"
                android:background="@drawable/input_icon_normal"
                android:editable="false"
                android:enabled="false"
                android:inputType="@null" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/boton_icon_normal"
                android:onClick="showDatePickerDialog"
                android:src="@drawable/ic_action_calendar" />
        </LinearLayout>

        <!-- Correo -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/label_correo_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="textEmailAddress" />

        <!-- Contraseña -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/label_contrasena_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="textPassword"
            android:singleLine="true" />

        <!-- Confimar Contraseña -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/label_confir_contrasena_registro"
            android:textColor="#838282" />

        <EditText
            android:id="@+id/txtConfirPassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dip"
            android:background="@drawable/input_movilu_normal"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnResgitrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_movilu_normal"
            android:text="@string/label_bt_registro"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>
